style all components to be responsive, add favicon

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <h1>Memory Game</h1>
         </header>
 
-        <section class="section-info">
+        <section class="info-panel">
         	<ul class="stars">
         		<li><i class="icofont-star"></i></li>
         		<li><i class="icofont-star"></i></li>
@@ -30,8 +30,7 @@
         		<i class="icofont-refresh"></i> Reset the Game
         	</div>
         </section>
-
-        <section class="section-card">
+        
         <ul class="deck">
             <li class="card match">
                 <i class="icofont-fish-5"></i>
