feat: create randomly arranged cards

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </section>
         
         <ul class="deck">
-            <li class="card match">
+            <!-- <li class="card match">
                 <i class="icofont-fish-5"></i>
             </li>
             <li class="card match">
@@ -79,7 +79,7 @@
             </li>
             <li class="card">
                 <i class="icofont-heart"></i>
-            </li>
+            </li> -->
         </ul>
     </div>
 
