feat: check if cards match, lock cards open when matched, unflip when not matched

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         		<li><i class="icofont-star"></i></li>
         		<li><i class="icofont-star"></i></li>
         	</ul>
-        	<span class="moves">3 Moves</span> 
+        	<span class="moves"><span id="move-number">0</span><span id="move-word"> Moves</span></span> 
             <span class="timer">0:01:10</span> 
             <div class="restart">
         		<i class="icofont-refresh"></i> Reset the Game
