feat: star rating

--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
         </header>
 
         <section class="info-panel">
-        	<ul class="stars">
-        		<li><i class="icofont-star"></i></li>
-        		<li><i class="icofont-star"></i></li>
-        		<li><i class="icofont-star"></i></li>
-        	</ul>
+        	<ul id="stars-list" class="stars">
+        		<li class="star"><i class="icofont-star"></i></li>
+        		<li class="star"><i class="icofont-star"></i></li>
+        		<li class="star"><i class="icofont-star"></i></li>
+            </ul>
         	<span class="moves"><span id="move-number">0</span><span id="move-word"> Moves</span></span> 
             <span class="timer">0:01:10</span> 
-            <div class="restart">
-        		<i class="icofont-refresh"></i> Reset the Game
+            <div id="restart-btn" class="restart">
+        		<i class="icofont-refresh"></i> Restart
         	</div>
         </section>
         
