feat: init game, markup congrats modal

--- a/index.html
+++ b/index.html
@@ -30,7 +30,20 @@
         		<i class="icofont-refresh"></i> Restart
         	</div>
         </section>
-        
+        <!-- The Modal -->
+        <div id="congrats" class="modal-congrats">
+            <div class="modal-content">
+                <span class="trophy">🏆</span>
+                <span class="modal-close">&times;</span>
+                <h3>Congratulations!</h3>
+                <ul class= "">You've finished the game!
+                    <li>Your total time :<span class = "congrats-time"></span></li>
+                    <li>Your star rating: <span class = "congrats-stars"></span></li>
+                    <li>Your grade: <span class = "congrats-grade"></span></li>
+                </ul>
+                <button type="button" class="modal-replay">Replay!</button>
+            </div>
+        </div>
         <ul class="deck">
             <!-- <li class="card match">
                 <i class="icofont-fish-5"></i>
