--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
                 <h3>Congratulations!</h3>
                 <h6>You've finished the game!</h6>
                 <ul class= "congrats-info"> 
-                    <li class="congrats-item">Your total time :<span id="congrats-time"></span></li>
-                    <li class="congrats-item">Your star rating: <span id="congrats-stars"></span></li>
-                    <li class="congrats-item">Your grade: <span id="congrats-grade"></span></li>
+                    <li class="congrats-item">Your total time :<span id="congrats-time" class="info-summary">10</span></li>
+                    <li class="congrats-item">Your star rating : <span id="congrats-stars" class="info-summary">1010</span></li>
+                    <li class="congrats-item">Your grade : <span id="congrats-grade" class="info-summary">1010</span></li>
                 </ul>
                 <button type="button" class="modal-replayBtn">Replay!</button>
             </div>
