style: update color

--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
                 <span class="modal-close">&times;</span>
                 <img class="congrats-svg" src="img/congrats.svg" alt="confetti">
                 <h3>Congratulations!</h3>
-                <h6>You've finished the game!</h6>
+                <h6>All cards have been successfully matched!</h6>
                 <ul class= "congrats-info"> 
-                    <li class="congrats-item"><span class="info">Your total time :</span><span id="congrats-time" class="info-summary"></span></li>
-                    <li class="congrats-item"><span class="info">Your star rating : </span><span id="congrats-stars" class="info-summary"></span></li>
-                    <li class="congrats-item"><span class="info">Your grade : </span><span id="congrats-grade" class="info-summary"></span></li>
+                    <li class="congrats-item"><span class="info">Your total time </span><span id="congrats-time" class="info-summary"></span></li>
+                    <li class="congrats-item"><span class="info">Your star rating </span><span id="congrats-stars" class="info-summary"></span></li>
+                    <li class="congrats-item"><span class="info">Your grade </span><span id="congrats-grade" class="info-summary"></span></li>
                 </ul>
                 <button type="button" class="modal-replayBtn">Replay!</button>
             </div>
