--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         		<li class="star"><i class="icofont-star"></i></li>
         		<li class="star"><i class="icofont-star"></i></li>
             </ul>
-        	<span class="moves"><span id="move-number">0</span><span id="move-word"> Moves</span></span> 
+        	<span class="moves"><span id="move-number"></span><span id="move-word"></span></span> 
             <span id="clock" class="timer">0:01:10</span> 
             <div id="restart-btn" class="restart">
         		<i class="icofont-refresh"></i> Restart
