chore: clean up and comment html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
+    <meta name="description" content="memory game app">
     <link rel="stylesheet" href="icofont/icofont.min.css">
     <link rel="stylesheet prefetch" href="https://fonts.googleapis.com/css?family=Nunito">
     <link rel="stylesheet" href="css/app.css">
@@ -30,7 +30,7 @@
         		<i class="icofont-refresh"></i> Restart
         	</div>
         </section>
-        <!-- The Modal -->
+        <!-- The Popup Modal -->
         <div id="congrats" class="modal-congrats">
             <div class="modal-content">
                 <span class="modal-close">&times;</span>
@@ -45,55 +45,8 @@
                 <button type="button" class="modal-replayBtn">Replay!</button>
             </div>
         </div>
+        <!-- Card Deck -->
         <ul class="deck">
-            <!-- <li class="card match">
-                <i class="icofont-fish-5"></i>
-            </li>
-            <li class="card match">
-                <i class="icofont-cherry"></i>
-            </li>
-            <li class="card match">
-                <i class="icofont-birthday-cake"></i>
-            </li>
-            <li class="card match">
-                <i class="icofont-umbrella"></i>
-            </li>
-            <li class="card match">
-                <i class="icofont-apple"></i>
-            </li>
-            <li class="card match">
-                <i class="icofont-fire-truck"></i>
-            </li>
-            <li class="card match">
-                <i class="icofont-leaf"></i>
-            </li>
-            <li class="card match">
-                <i class="icofont-heart"></i>
-            </li>
-            <li class="card">
-                <i class="icofont-fish-5"></i>
-            </li>
-            <li class="card ">
-                <i class="icofont-cherry"></i>
-            </li>
-            <li class="card match">
-                <i class="icofont-birthday-cake"></i>
-            </li>
-            <li class="card">
-                <i class="icofont-umbrella"></i>
-            </li>
-            <li class="card">
-                <i class="icofont-apple"></i>
-            </li>
-            <li class="card match">
-                <i class="icofont-fire-truck"></i>
-            </li>
-            <li class="card open show">
-                <i class="icofont-leaf"></i>
-            </li>
-            <li class="card">
-                <i class="icofont-heart"></i>
-            </li> -->
         </ul>
     </div>
 
